FIX: h_site -> removed mobile white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8613,20 +8613,20 @@ a.btn--black {
   background-image: url(../img/header_img.jpg);
   background-position: center center;
   background-size: cover;
-  height: 100%;
+  height: 650px;
   width: 100%;
   position: relative;
 }
 
-@media (max-width: 960.98px) {
+@media (min-width: 481px) {
   .h_site {
-    height: 650px;
+    height: 750px;
   }
 }
 
-@media (max-width: 1360.98px) {
+@media (min-width: 961px) {
   .h_site {
-    height: 750px;
+    height: 100%;
   }
 }
 
