--- a/src/scss/header/h_site.scss
+++ b/src/scss/header/h_site.scss
@@ -2,16 +2,16 @@
     background-image: url(../img/header_img.jpg);
     background-position: center center;
     background-size: cover;
-    height: 100%;
+    height: 650px;
     width: 100%;
     position: relative;
-
-    @include media-breakpoint-down(sm) {
-        height: 650px;
-    }
-
-    @include media-breakpoint-down(md) {
+    
+    @include media-breakpoint-up(sm) {
         height: 750px;
+    }
+    
+    @include media-breakpoint-up(md) {
+        height: 100%;
     }
 
     &__claim {
